files/testepod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: podtemp
  name: podtemp
  namespace: default
spec:
  containers:
  - image: alpine
    name: podtemp
    command:
      - /bin/sh
      - "-c"
      - "sleep 60m"    
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
