files/svc-headerdemodeploy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: headerdemo
  name: headerdemo
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: headerdemo
status:
  loadBalancer: {}
