files/header-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headerdemo
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: headerdemo
            port:
              number: 80
        path: /
        pathType: Prefix
